# humanize

./: .gitignore  app_gui.py  fix_profiles.py  p.md  test_mbg.py
humanwrite-backend/: .env.example  .gitignore  Dockerfile  README.md  patch.py  pyproject.toml  test_academic.py  test_all_modes_bestof2.py
humanwrite-backend/app/: __init__.py  config.py  main.py
humanwrite-backend/app/core/: detection_scorer.py  evaluator.py  pipeline.py  prompts.py  style_analyzer.py  text_utils.py  writing_engine.py
humanwrite-backend/app/models/: schemas.py  style_profile.py
humanwrite-backend/app/storage/: json_store.py
humanwrite-backend/data/: benchmark_cases.json  corpus_akademik.csv  corpus_kreatif.csv  corpus_populer.csv  corpus_profesional.csv
humanwrite-backend/data/corpus_akademik/: real_1.txt  real_10.txt  real_100.txt  real_11.txt  real_12.txt  real_13.txt  real_14.txt  real_15.txt  real_16.txt  real_17.txt  real_18.txt  real_19.txt  real_2.txt  real_20.txt  real_21.txt  real_22.txt  real_23.txt  real_24.txt  real_25.txt  real_26.txt  real_27.txt  (+79 more)
humanwrite-backend/notebooks/: Data_Training_Pipeline.ipynb
humanwrite-backend/scripts/: colab_training_pipeline.py  download_id_corpus.py  download_sample_data.py  enrich_training_corpus.py  generate_100_real_corpus.py  generate_8000_corpus.py  run_evaluations.py  test_engine_debug.py  test_groq_engine.py  train_global_style.py  train_global_style_id.py  train_profiles.py
humanwrite-backend/tests/: conftest.py  test_api_process.py  test_core_pipeline.py  test_core_style_analyzer.py  test_core_writing_engine.py
(+338 files in other folders)
