[project]
name = "humanwrite-backend"
version = "0.1.0"
description = "HumanWrite AI — Rewrite LLM drafts to match your personal writing style"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-ai[groq]>=0.2.0",
    "groq>=0.12.0",
    "spacy>=3.7.0",
    "stanza>=1.8.0",
    "textstat>=0.7.0",
    "python-docx>=1.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "langdetect>=1.0.9",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
gui = [
    "streamlit>=1.40.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
